# pycon-lt-demo

./: .gitignore  Makefile  README.md  compose.yml  pyconlt.py  pyproject.toml
.upsun/: config.yaml
fixtures/: conferences.json  talks.json
migrations/: 0001_initial.py
