[project]
name = "pycon-lt-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2",
    "gunicorn>=23.0.0",
    "nanodjango>=0.10.0",
    "psycopg[pool]>=3.2.6",
    "sec>=0.3.0",
    "uvicorn>=0.34.2",
    "uvicorn-worker>=0.3.0",
]

[dependency-groups]
dev = [
    "psycopg-binary>=3.2.6",
]
